--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
 <tr>
   <td>
-    <img src="fasi.png" width="200px" height="200px"></td>
+    <img src="images/fasi.png" width="200px" height="200px"></td>
     <td><h1>Faseeha Shahul</h1>
     <p>
   <em>WEB DEVELOPER AT DUBAI,One of my worked Website is <strong><a href="https://creaturesoasis.com/">Creatutres Oasis</a></strong></em>
